# lumi

./: .gitignore  .impeccable.md  AUDIT_CHECKLIST.md  OMI-FLOATING-BAR-MECHANICS.md  README.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/tts/: .gitignore  pyproject.toml  server.py
src-tauri/src/: exporter.rs  lib.rs  main.rs
src-tauri/src/audio/: capture.rs  mod.rs  transcribe.rs  vad.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/llm/: client.rs  mod.rs  processor.rs  prompts.rs  rag.rs  tools.rs
src-tauri/src/tts/: sidecar.rs
src/components/: Sidebar.tsx  VoiceMode.tsx
src/lib/: sentenceBatch.ts  tauri.ts  ttsPlayer.ts
src/pages/: ChatPage.tsx  ConversationsPage.tsx  FocusPage.tsx  MemoriesPage.tsx  MemoryDetailPage.tsx  RewindPage.tsx  SettingsPage.tsx  TasksPage.tsx
src/styles/: app.css  tokens.css
src/windows/: FloatingBar.tsx
